--- a/chef/cookbooks/apache2/templates/default/apache2.conf.erb
+++ b/chef/cookbooks/apache2/templates/default/apache2.conf.erb
@@ -5,6 +5,9 @@
 
 ServerRoot "<%= node['apache']['dir'] %>"
 
+DocumentRoot "/var/www/html"
+
+
 #
 # The accept serialization lock file MUST BE STORED ON A LOCAL DISK.
 #
